Fix if MKV file only has second void element

--- a/Matroska.Test/Matroska.Test.csproj
+++ b/Matroska.Test/Matroska.Test.csproj
@@ -21,6 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\EtoTest\EtoTest.Gtk\EtoTest.Gtk.csproj" />
       <ProjectReference Include="..\EtoTest\MatroskaTest\Matroska.csproj" />
     </ItemGroup>
 
