--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,5 +22,6 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-    - run: copy "TestMkvFiles/mkv files/*" "Matroska.Test/bin/Debug/net5.0/mkv files"
-    - run: dotnet test --no-build --verbosity normal
+      run: | 
+        copy "TestMkvFiles/mkv files/*" "Matroska.Test/bin/Debug/net5.0/mkv files"
+        dotnet test --no-build --verbosity normal
