--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: FedericoCarboni/setup-ffmpeg@v1
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
@@ -22,6 +23,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: | 
-        copy "TestMkvFiles/mkv files/*" "Matroska.Test/bin/Debug/net5.0/mkv files"
-        dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal
