--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,12 +14,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: FedericoCarboni/setup-ffmpeg@v1
-    - uses: actions/cache@v2
-      with:
-        path: ~/.nuget/packages
-        key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-nuget-
+#    - uses: actions/cache@v2
+#      with:
+#        path: ~/.nuget/packages
+#        key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+#        restore-keys: |
+#          ${{ runner.os }}-nuget-
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
