--- a/MkvDefaultSwitcher2/MkvDefaultSwitcher2/MkvDefaultSwitcher2.csproj
+++ b/MkvDefaultSwitcher2/MkvDefaultSwitcher2/MkvDefaultSwitcher2.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\MatroskaLib\MatroskaLib.csproj" />
+    <ProjectReference Include="..\..\MatroskaLib\MatroskaLib\MatroskaLib.csproj" />
   </ItemGroup>
   
 </Project>
