--- a/MkvReadCrawler/MkvReadCrawler.csproj
+++ b/MkvReadCrawler/MkvReadCrawler.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\MatroskaLib\MatroskaLib.csproj" />
+      <ProjectReference Include="..\MatroskaLib\MatroskaLib\MatroskaLib.csproj" />
     </ItemGroup>
 
 </Project>
