--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,10 +7,10 @@ on:
         description: 'Version'     
         required: true
         default: ''
-
+env:
+  publish-win-path: ./MkvDefaultSwitcher2/MkvDefaultSwitcher2.WinForms/bin/Release/net5.0-windows/win-x64/publish/
 jobs:
   build:
-
     runs-on: windows-latest
 
     steps:
@@ -23,6 +23,10 @@ jobs:
       run: dotnet restore
     - name: Build Windows
       run: dotnet publish MkvDefaultSwitcher2/MkvDefaultSwitcher2.WinForms/MkvDefaultSwitcher2.WinForms.csproj --configuration Release  -r win-x64 -p:PublishSingleFile=true --self-contained true -p:PublishTrimmed=True -p:IncludeNativeLibrariesForSelfExtract=true -p:Version=${{ github.event.inputs.version }}
+    - name: Zip releases
+      run: |
+        powershell Rename-Item ${{ publish-win-path }}/MkvDefaultSwitcher2.WinForms.exe ${{ publish-win-path }}/MkvDefaultSwitcher2-V${{ github.event.inputs.version }}.exe
+        powershell Compress-Archive ${{ publish-win-path }}/MkvDefaultSwitcher2-V${{ github.event.inputs.version }}.exe ./MkvDefaultSwitcher2-windows-V${{ github.event.inputs.version }}.zip
     - name: Create Draft Release
       id: create_release
       uses: actions/create-release@v1
@@ -39,9 +43,9 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./MkvDefaultSwitcher2/MkvDefaultSwitcher2.WinForms/bin/Release/net5.0-windows/win-x64/publish/MkvDefaultSwitcher2.WinForms.exe
-        asset_name: MkvDefaultSwitcher2-win.exe
-        asset_content_type: application/octet-stream
+        asset_path: ./MkvDefaultSwitcher2-windows-V${{ github.event.inputs.version }}.zip
+        asset_name: MkvDefaultSwitcher2-windows-V${{ github.event.inputs.version }}.zip
+        asset_content_type: application/zip
     - uses: eregon/publish-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
