--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Create release
 
 on:
   workflow_dispatch:
@@ -9,6 +9,7 @@ on:
         default: ''
 env:
   PUBLISH_WIN_PATH: ./MkvDefaultSwitcher2/MkvDefaultSwitcher2.WinForms/bin/Release/net5.0-windows/win-x64/publish
+  PUBLISH_LINUX_PATH: ./MkvDefaultSwitcher2/MkvDefaultSwitcher2.Gtk/bin/Release/net5.0/linux-x64/publish
 jobs:
   build:
     runs-on: windows-latest
@@ -23,10 +24,14 @@ jobs:
       run: dotnet restore
     - name: Build Windows
       run: dotnet publish MkvDefaultSwitcher2/MkvDefaultSwitcher2.WinForms/MkvDefaultSwitcher2.WinForms.csproj --configuration Release  -r win-x64 -p:PublishSingleFile=true --self-contained true -p:PublishTrimmed=True -p:IncludeNativeLibrariesForSelfExtract=true -p:Version=${{ github.event.inputs.version }}
+    - name: Build Linux
+      run: dotnet publish MkvDefaultSwitcher2/MkvDefaultSwitcher2.Gtk/MkvDefaultSwitcher2.Gtk.csproj --configuration Release -r linux-x64 -p:PublishSingleFile=true --self-contained true -p:PublishTrimmed=True -p:TrimMode=CopyUsed -p:Version=${{ github.event.inputs.version }}
     - name: Zip releases
       run: |
         powershell Rename-Item $env:PUBLISH_WIN_PATH/MkvDefaultSwitcher2.WinForms.exe MkvDefaultSwitcher2-V${{ github.event.inputs.version }}.exe
         powershell Compress-Archive $env:PUBLISH_WIN_PATH/MkvDefaultSwitcher2-V${{ github.event.inputs.version }}.exe ./MkvDefaultSwitcher2-windows-V${{ github.event.inputs.version }}.zip
+        powershell Rename-Item $env:PUBLISH_LINUX_PATH/MkvDefaultSwitcher2.Gtk MkvDefaultSwitcher2-V${{ github.event.inputs.version }}.Gtk
+        powershell Compress-Archive $env:PUBLISH_LINUX_PATH/MkvDefaultSwitcher2-V${{ github.event.inputs.version }}.Gtk ./MkvDefaultSwitcher2-linux-V${{ github.event.inputs.version }}.zip
     - name: Create Draft Release
       id: create_release
       uses: actions/create-release@v1
@@ -35,10 +40,11 @@ jobs:
       with:
         tag_name: V${{ github.event.inputs.version }}
         release_name: V${{ github.event.inputs.version }}
-        body: <TODO>
+        body: TODO
         draft: true
         prerelease: false
-    - uses: actions/upload-release-asset@v1.0.1
+    - name: Upload release Windows
+      uses: actions/upload-release-asset@v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
@@ -46,8 +52,12 @@ jobs:
         asset_path: ./MkvDefaultSwitcher2-windows-V${{ github.event.inputs.version }}.zip
         asset_name: MkvDefaultSwitcher2-windows-V${{ github.event.inputs.version }}.zip
         asset_content_type: application/zip
-    - uses: eregon/publish-release@v1
+    - name: Upload release Linux
+      uses: actions/upload-release-asset@v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        release_id: ${{ steps.create_release.outputs.id }}
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./MkvDefaultSwitcher2-linux-V${{ github.event.inputs.version }}.zip
+        asset_name: MkvDefaultSwitcher2-linux-V${{ github.event.inputs.version }}.zip
+        asset_content_type: application/zip
