Rename to MkvDefaultSwitcher

--- a/.gitignore
+++ b/.gitignore
@@ -473,3 +473,6 @@ FodyWeavers.xsd
 *.tlog
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,jetbrains
+
+
+MkvReadCrawler/*.txt
