--- a/MkvDefaultSwitcher/MkvDefaultSwitcher.WinForms/Properties/launchSettings.json
+++ b/MkvDefaultSwitcher/MkvDefaultSwitcher.WinForms/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "MkvDefaultSwitcher2.WinForms": {
+    "MkvDefaultSwitcher.WinForms": {
       "commandName": "Project",
       "nativeDebugging": true
     }
