Fix configuration for Gtk project

--- a/MkvDefaultTrackChanger/MkvDefaultTrackChanger.Gtk/MkvDefaultTrackChanger.Gtk.csproj
+++ b/MkvDefaultTrackChanger/MkvDefaultTrackChanger.Gtk/MkvDefaultTrackChanger.Gtk.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>MkvDefaultTrackChanger.Gtk</RootNamespace>
+    <RootNamespace>MkvDefaultTrackChanger.GtkSharp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
